package edu.tec.ic6821.fulltextsearch.tokenizer;

public interface FileTokenizer {
    boolean hasNext();
    String next();
}
